# my-workspace

./: .bashrc  .conkyrc  .github-repos.yaml  .gitignore  .set-keyboard-layout.sh  .spacemacs  .vimrc  .xinitrc  README.org  copy-workstation.sh  install.sh
.emacs.d/: init.el  settings.org
.xmonad/: myxmonad.cabal  stack.yaml  xmonad.hs
.xmonad/app/: xmonad.hs
.xmonad/scripts/: layout.sh  startup.sh
.xmonad/src/Github/: Main.hs
.xmonad/src/XMonad/: Main.hs
myxmonad/: .gitignore  README.org  default.nix  shell.nix  stack.yaml
myxmonad/src/XMonad/: Main.hs
