name:                myxmonad
version:             0.1.0.0
homepage:            https://github.com/jcolemang/my-workspace#README.md
author:              James Coleman Gibson
cabal-version:       >=1.10


executable get-pull-requests
  hs-source-dirs:      src/Github
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wreq
                     , lens
                     , aeson
                     , bytestring
                     , containers
  default-language:    Haskell2010


executable myxmonad
  hs-source-dirs:      src/XMonad
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xmonad
                     , X11
                     , containers
                     , xmonad-contrib
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/jcolemang/my-workspace
